# identity-service

./: README.md  pyproject.toml
app/: main.py
app/api/routes/: auth.py
app/core/: config.py
app/domain/entities/: auth_credentials.py  user.py
app/domain/ports/: auth_repository.py  password_hasher.py  user_repository.py
app/domain/value_objects/: email.py  user_id.py
app/infrastructure/repositories/: in_memory_auth_repository.py  in_memory_user_repository.py
app/infrastructure/security/: bcrypt_hasher.py  jwt_service.py
app/use_cases/commands/: login_user.py  register_user.py
app/use_cases/dtos/: login_user.py  register_user.py
tests/: conftest.py
tests/api/routes/: test_auth.py
